--- a/backend/frontend/public/index.html
+++ b/backend/frontend/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico">
+    <title>Flux - Your Book App</title>
   </head>
   <body>
     <div id="root"></div>
